# Oxygen-Deobf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ast.lua  beautifier.lua  collector.lua  config.lua  decrypt.lua  env.lua  garbage.lua  hooks.lua  init.lua  reverser.lua  sender.lua  table_collector.lua  update.sh  utils.lua  vm.lua
cmake/: FindLuau.cmake
src/: main.cpp
src/Core/: EmbeddedScripts.hpp  ErrorFixer.cpp  ErrorFixer.hpp  LuauVM.cpp  LuauVM.hpp  Pipeline.cpp  Pipeline.hpp  Sandbox.cpp  Sandbox.hpp  VariableRenamer.cpp  VariableRenamer.hpp  WeAreDevsHook.lua
src/Obfuscators/: IronBrew.cpp  MoonSec.cpp  Prometheus.cpp  WeAreDevs.cpp
src/Utils/: FileUtils.cpp  FileUtils.hpp  Logger.cpp  Logger.hpp
